Fixed dynamic agent loading warning